# Smart-Summarizer

./: .dockerignore  .gitignore  README.md  TODO  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml
backend/: Dockerfile  README.md  config.py  main.py  requirements.txt  run_migrations.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/db/: __init__.py  chroma_db.py  models.py  sql_alchelmy.py
backend/app/embeddings/: __init__.py  vectorstore.py
backend/app/enums/: __init__.py
backend/app/ingestion/: __init__.py
backend/app/retriever/: __init__.py
backend/app/schema/: __init__.py  query_schema.py
backend/app/utils/: __init__.py
backend/app/views/: endpoints.py
backend/migrations/: __init__.py  db_migrations.py  file_id.py
frontend/: Dockerfile  app.py
frontend/.streamlit/: config.toml  secrets.toml
